# juggler

./: .gitignore  README.md  pyproject.toml
juggler/: __init__.py  juggler.py
tests/: test_juggler.py
