[tool.poetry]
name = "juggler"
version = "0.1.0"
description = "Multi-processing for Python"
authors = ["chinmay <hi@chinmayshah.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
